--- a/camera_test1/Camera.qsf
+++ b/camera_test1/Camera.qsf
@@ -754,6 +754,9 @@ set_location_assignment PIN_AG22 -to ECHO
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ECHO
 set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
 set_global_assignment -name SMART_RECOMPILE ON
+set_global_assignment -name SYSTEMVERILOG_FILE seven_seg.sv
+set_global_assignment -name SYSTEMVERILOG_FILE display.sv
+set_global_assignment -name SYSTEMVERILOG_FILE colour_debug.sv
 set_global_assignment -name SYSTEMVERILOG_FILE vga_scaler.sv
 set_global_assignment -name HEX_FILE colorbars.hex
 set_global_assignment -name SYSTEMVERILOG_FILE ov7670_pixel_capture.sv
@@ -770,4 +773,5 @@ set_global_assignment -name SYSTEMVERILOG_FILE image_buffer_tb.sv
 set_global_assignment -name QIP_FILE image_RAM.qip
 set_global_assignment -name SYSTEMVERILOG_FILE vga_driver.sv
 set_global_assignment -name SYSTEMVERILOG_FILE camera_stream_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE roi_overlay.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
