--- a/camera_test1/Camera.qsf
+++ b/camera_test1/Camera.qsf
@@ -703,35 +703,35 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_global_assignment -name ENABLE_SIGNALTAP ON
+set_global_assignment -name ENABLE_SIGNALTAP OFF
 set_global_assignment -name USE_SIGNALTAP_FILE output_files/signal_tap1.stp
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
 set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH camera_stream_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME image_buffer_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id image_buffer_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME image_buffer_tb -section_id image_buffer_tb
-set_instance_assignment -name IO_STANDARD "2.5 V" -to OV7670_DATA[6]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to OV7670_DATA[5]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to OV7670_DATA[4]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to OV7670_DATA[3]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to OV7670_DATA[2]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to OV7670_DATA[1]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to OV7670_DATA[0]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to OV7670_HREF
-set_instance_assignment -name IO_STANDARD "2.5 V" -to OV7670_PCLK
-set_instance_assignment -name IO_STANDARD "2.5 V" -to OV7670_PWDN
-set_instance_assignment -name IO_STANDARD "2.5 V" -to OV7670_RESET
-set_instance_assignment -name IO_STANDARD "2.5 V" -to OV7670_XCLK
-set_instance_assignment -name IO_STANDARD "2.5 V" -to OV7670_SIOD
-set_instance_assignment -name IO_STANDARD "2.5 V" -to OV7670_SIOC
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OV7670_DATA[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OV7670_DATA[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OV7670_DATA[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OV7670_DATA[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OV7670_DATA[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OV7670_DATA[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OV7670_DATA[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OV7670_HREF
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OV7670_PCLK
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OV7670_PWDN
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OV7670_RESET
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OV7670_XCLK
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OV7670_SIOD
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OV7670_SIOC
 set_global_assignment -name BOARD "DE1-SoC Board"
 set_global_assignment -name EDA_TEST_BENCH_NAME camera_stream_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id camera_stream_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME camera_stream_tb -section_id camera_stream_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE image_buffer_tb.sv -section_id image_buffer_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE camera_stream_tb.sv -section_id camera_stream_tb
-set_instance_assignment -name IO_STANDARD "2.5 V" -to OV7670_DATA[7]
-set_instance_assignment -name IO_STANDARD "2.5 V" -to OV7670_VSYNC
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OV7670_DATA[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OV7670_VSYNC
 set_location_assignment PIN_AF23 -to ROVER_TX
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ROVER_TX
 set_location_assignment PIN_AD21 -to ROVER_RX
@@ -767,7 +767,6 @@ set_global_assignment -name VERILOG_FILE i2c_sender.v
 set_global_assignment -name VERILOG_FILE ov7670_controller.v
 set_global_assignment -name QIP_FILE video_PLL.qip
 set_global_assignment -name SIP_FILE video_PLL.sip
-set_global_assignment -name SIGNALTAP_FILE output_files/signal_tap1.stp
 set_global_assignment -name SYSTEMVERILOG_FILE image_buffer_tb.sv
 set_global_assignment -name QIP_FILE image_RAM.qip
 set_global_assignment -name SYSTEMVERILOG_FILE vga_driver.sv
@@ -777,4 +776,8 @@ set_global_assignment -name SYSTEMVERILOG_FILE colour_detect.sv
 set_global_assignment -name SYSTEMVERILOG_FILE colour_debug.sv
 set_global_assignment -name SYSTEMVERILOG_FILE rbg_to_hsv.sv
 set_global_assignment -name SYSTEMVERILOG_FILE roi_overlay.sv
+set_global_assignment -name FITTER_EFFORT "FAST FIT"
+set_global_assignment -name SYSTEMVERILOG_FILE camera_drive_flags.sv
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OV7670_DATA
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to OV7670_PWON
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
